# openid-2.0

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/api/: health.rs  mod.rs  session.rs
src/api/auth/: mod.rs  never.rs  steam.rs
src/api/steam/: mod.rs  player_bans.rs  player_summaries.rs  steam_level.rs
src/error/: app_error.rs  error_handler.rs  error_json.rs  mod.rs
src/openid/: comma_separated.rs  constants.rs  mod.rs  nonce.rs  params.rs  provider.rs  response.rs  validate.rs  xml.rs  xml_util.rs
src/openid/util/: comma_separated.rs  comma_separated_serde.rs  comma_separated_serde_2.rs  key_values.rs  mod.rs  nonce.rs
src/openid/util/comma_separated_impl/: de.rs
src/openid/util/key_values/: de.rs  mod.rs
src/openid_next/: enums.rs  mod.rs  structs.rs
src/util/: log.rs  mod.rs  nonce.rs
